# maven-archeologist

./: .editorconfig  .gitignore  .travis.yml  BUILD.bazel  README.md  RELEASE.md  WORKSPACE  versions.bzl
.github/workflows/: ci.yml
src/main/java/com/squareup/tools/maven/resolution/: AbstractArtifactFetcher.kt  ArtifactFetcher.kt  ArtifactResolver.kt  BUILD.bazel  GlobalConfig.kt  Hashing.kt  HttpArtifactFetcher.kt  InterceptingMavenReader.kt  MavenVersion.kt  Model.kt  ProxyHelper.kt  Repositories.kt  ResolveArtifact.kt  SimpleHttpResolver.kt  Utils.kt  Validator.kt
src/main/java/com/squareup/tools/maven/resolution/demo/simple/: BUILD.bazel  ResolveArtifact.kt
src/main/java/com/squareup/tools/maven/resolution/gradle/: BUILD.bazel  GradleModuleParser.kt  Module.kt  ModuleCapabilities.kt  ModuleComponent.kt  ModuleDependency.kt  ModuleDependencyConstraint.kt  ModuleFile.kt  ModuleVariant.kt  ModuleVersionConstraint.kt
src/test/java/com/squareup/tools/maven/resolution/: BUILD.bazel  FakeFetcher.kt  GradleModelTest.kt  GradleModuleParsingTest.kt  GradleModuleResolutionTest.kt  HttpProxyTest.kt  MavenVersionTest.kt  ResolutionTest.kt
src/test/java/com/squareup/tools/maven/resolution/data/: extra-attributes.module  gradle-example-java-library.module  gradle-module-spec-1.0-example.module  gradle-module-spec-1.1-example.module  okio-2.6.0.module  okio-multiplatform-2.6.0.module
tools/: deploy  deploy.kts  setup-ci.sh
tools/release/: BUILD.bazel  release.bzl  release_metadata.bzl  settings.xml
