# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
load("//:versions.bzl", "LIBRARY_METADATA")
load("//tools/release:release.bzl", "deployment_jar_from_metadata", "maven_pom_from_metadata", "sources_jar_from_metadata")

#
# A makeshift little infrastructure for generating releasable artifacts. This is overkill for
# this library, but is an experiment in making something useful more generally.
#
exports_files(["placeholder-javadoc.jar"])

maven_pom_from_metadata(
    name = "pom",
    metadata = LIBRARY_METADATA,
)

sources_jar_from_metadata(
    name = "sources_jar",
    metadata = LIBRARY_METADATA,
)

deployment_jar_from_metadata(
    name = "deployment_jar",
    metadata = LIBRARY_METADATA,
)
