load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//:__subpackages__"])

CLI_SRCS = [
    "ResolveArtifact.kt",
]

kt_jvm_library(
    name = "resolution",
    srcs = glob(["*.kt"], exclude = CLI_SRCS),
    deps = [
        "@maven//com/squareup/okhttp3:okhttp",
        "@maven//org/apache/maven:maven-builder-support",
        "@maven//org/apache/maven:maven-model",
        "@maven//org/apache/maven:maven-model-builder",
    ],
)

kt_jvm_library(
    name = "main",
    srcs = CLI_SRCS,
    friend = ":resolution",
    deps = [
        ":resolution",
        "@maven//com/beust:jcommander",
        "@maven//org/apache/maven:maven-builder-support",
        "@maven//org/apache/maven:maven-model",
        "@maven//org/apache/maven:maven-model-builder",
    ],
)
