# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//:__subpackages__"])

CLI_SRCS = [
    "ResolveArtifact.kt",
]

kt_jvm_library(
    name = "resolution",
    srcs = glob(["*.kt"], exclude = CLI_SRCS),
    deps = [
        "@maven//com/squareup/okhttp3:okhttp",
        "@maven//org/apache/maven:maven-builder-support",
        "@maven//org/apache/maven:maven-model",
        "@maven//org/apache/maven:maven-model-builder",
    ],
)

kt_jvm_library(
    name = "main",
    srcs = CLI_SRCS,
    friend = ":resolution",
    deps = [
        ":resolution",
        "@maven//com/beust:jcommander",
        "@maven//org/apache/maven:maven-builder-support",
        "@maven//org/apache/maven:maven-model",
        "@maven//org/apache/maven:maven-model-builder",
    ],
)
