# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "testlib",
    testonly = True,
    srcs = glob(
        ["*.kt"],
        exclude = ["*Test.kt"],
    ),
    friend = "//src/main/java/com/squareup/tools/maven/resolution",
    deps = [
        "//src/main/java/com/squareup/tools/maven/resolution",
        "@maven//com/google/truth",
    ],
)

kt_jvm_test(
    name = "MavenVersionTest",
    srcs = ["MavenVersionTest.kt"],
    friends = ["//src/main/java/com/squareup/tools/maven/resolution"],
    test_class = "com.squareup.tools.maven.resolution.MavenVersionTest",
    deps = [
        "//src/main/java/com/squareup/tools/maven/resolution",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

kt_jvm_test(
    name = "ResolutionTest",
    srcs = ["ResolutionTest.kt"],
    friend = ":testlib",
    test_class = "com.squareup.tools.maven.resolution.ResolutionTest",
    deps = [
        ":testlib",
        "//src/main/java/com/squareup/tools/maven/resolution",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)
